# 2kurs

./: Array.cpp  DB.cpp  DoubleList.h  FBT.cpp  Makefile  Queue.cpp  Queue.h  SingleList.cpp  db_interface  main.cpp
go/: db_interface  doublelist.go  queue.go  singlelist.go  stack.go
lab1/: DB.h  DoubleList.cpp  FBT.h  SingleList.h  Stack.cpp  Stack.h  database.txt
lab1/go/: array.go  database.txt  database_app  db.go  fbt.go  go.mod  main.go
lab2/: cpp.txt  data.txt  h.txt  zd1  zd1.cpp  zd2  zd2.cpp  zd3  zd3.cpp  zd4  zd4.cpp  zd5  zd5.cpp  zd6  zd6.cpp  zd7  zd7.cpp
lab3/: .clang-tidy  Array.cpp  Array.h  CMakeLists.txt  DB.cpp  DB.cpp.backup2  DB.h  DoubleList.cpp  DoubleList.h  FullBinaryTree.cpp  FullBinaryTree.h  HashTable.cpp  HashTable.h  Queue.cpp  Queue.h  SingleList.cpp  SingleList.h  Stack.cpp  Stack.h  benchmark.cpp  boost_test.cpp  catch2_tests.cpp  fix_list_command.sh  google_test.cpp  main.cpp
lab4/: zd1  zd1.cpp  zd2  zd2.cpp  zd3  zd3.cpp
lab5/: main.cpp
lab6/: cinema  cinema.cpp
